--- a/Codes/cadastro.html
+++ b/Codes/cadastro.html
@@ -79,8 +79,34 @@
                         <div class="form-group col-md-4">
                             <label for="inputEstado">Estado</label>
                             <select id="inputEstado" class="form-control">
-                            <option selected>Escolher...</option>
-                            <option>...</option>
+                            <option selected>São Paulo</option>
+                            <option>Mato Grosso</option>
+                            <option>Distrito Federal</option>
+                            <option>Mato Grosso do Sul</option>
+                            <option>Goias</option>
+                            <option>Rio de Janeiro</option>
+                            <option>Espirito Santo</option>
+                            <option>Minas Gerais</option>
+                            <option>Santa Catarina</option>
+                            <option>Paraná</option>
+                            <option>Rio Grande do Sul</option>
+                            <option>Amazonas</option>
+                            <option>Rondonia</option>
+                            <option>Roraima</option>
+                            <option>Acre</option>
+                            <option>Maranhão</option>
+                            <option>Paraiba</option>
+                            <option>Bahia</option>
+                            <option>Sergipe</option>
+                            <option>Alagoas</option>
+                            <option>MPernambuco</option>
+                            <option>Rio Grande do Norte</option>
+                            <option>Tocantins</option>
+                            <option>Pará</option>
+                            <option>Ceará</option>
+                            <option>Piauí</option>
+                            <option>Amapá</option>
+
                             </select>
                         </div>
                         <div class="form-group col-md-2">
